tests/NormalTests/paczka2/big_fuzzy/86779712.err
Error in line 1: O95oreU S946 15,0
Error in line 17: 9gp S336 79,1
Error in line 12: eSR S582 64,5
Error in line 55: ETM S336 50,80
Error in line 58: S336 S946 38,64
Error in line 56: ETM S946 98,8
Error in line 59: ETM S582 37,8
Error in line 60: ETM S924 87,3
Error in line 72: iV2dCSDGZ S946 199,0
Error in line 41: S336 S336 56,7
Error in line 69: ETM S946 98,2
Error in line 77: ETM S924 55,6
Error in line 81: iV2dCSDGZ S946 15,1
Error in line 80: ETM S336 83,2
Error in line 85: iV2dCSDGZ S946 67,1
Error in line 93: s7ZA4UB5 S336 2,9
Error in line 97: O95oreU S946 84,0
Error in line 98: O95oreU S924 8,7
Error in line 99: O95oreU S336 48,3
Error in line 74: S336 S946 80,3
Error in line 115: eSR S924 55,0
Error in line 121: eSR S582 44,0
Error in line 132: 9gp S582 10,08
Error in line 139: eSR S946 48,9
Error in line 141: 9gp S582 26,7
Error in line 146: S336 S924 25,1
Error in line 157: iV2dCSDGZ S582 40,6
Error in line 179: S336 S336 44,76
Error in line 196: S336 S336 22,4
Error in line 197: s7ZA4UB5 S336 12,5
Error in line 199: ETM S582 0,3
Error in line 190: eSR S946 376,0
Error in line 200: iV2dCSDGZ S336 21,3
Error in line 216: s7ZA4UB5 S924 25,5
Error in line 217: s7ZA4UB5 S336 5,5
Error in line 212: S336 S582 21,4
Error in line 225: O95oreU S582 78,9
Error in line 232: iV2dCSDGZ S924 60,4
Error in line 226: S336 S946 94,5
Error in line 241: iV2dCSDGZ S946 1,2
Error in line 249: iV2dCSDGZ S582 2,53
